# wx-wasm-bindgen

./: .gitignore  Cargo.toml  README.md  build.cmd  encoding_utf8.min.js  pack.js  replace.js
src/: lib.rs
wasm-bindgen-test/: app.js  project.config.json  project.private.config.json
wasm-bindgen-test/pages/index/: encoding.js  hello.js  hello.wasm  index.js  index.wxml
