[package]
name = "hello"
version = "0.1.0"
authors = ["planet0104 <planet2@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.59"
js-sys = "0.3.36"
md5 = "0.7.0"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
panic = 'abort'