[package]
name = "hello"
version = "0.2.0"
authors = ["planet0104 <planet2@qq.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.84"
# wasm-bindgen-futures = "0.4.34"
js-sys = "0.3.61"
md5 = "0.7.0"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
panic = 'abort'